--- a/css/styles.css
+++ b/css/styles.css
@@ -85,6 +85,13 @@ a {
   width:100%;
   padding-top: 10px;
   border-bottom: 2px solid #186C90;
+  transition: all .5s ease-in-out;
+  filter: grayscale(0%);
+}
+
+.projimage:hover {
+  filter: grayscale(100%);
+  transform: scale(1.05);
 }
 
 h3 {
@@ -102,10 +109,27 @@ ul, ol {
   list-style-type: none;
 }
 
+.formore {
+  text-align:center;
+}
 .footer {
   width: 100%;
   height: 100px;
   background-color: #E0C149;
-  margin-top: 20px;
+  margin-top: 50px;
   border-bottom: 2px solid #186C90;
+}
+
+.footer p{
+  float: right;
+  margin: 10px;
+  margin-top: 40px;
+  color: #186C90;
+}
+
+.footer i {
+  font-size: 40px;
+  margin: 5px;
+  padding-top: 25px;
+  color: #186C90;
 }
